--- a/module_2/task.ipynb
+++ b/module_2/task.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 200,
    "id": "3858c5c8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 201,
    "id": "cb2b4dfe",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 202,
    "id": "069a299a",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 203,
    "id": "bdd0f79c",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 204,
    "id": "88b95c3c",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 205,
    "id": "cab7cbb9",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "updated_orders = orders\n",
+    "updated_orders = orders.copy()\n",
     "updated_orders[\"order_start_prepare\"] = pd.to_datetime(\n",
     "    updated_orders[\"order_start_prepare\"]\n",
     ")\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 206,
    "id": "fb8c62d8",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 207,
    "id": "c91afa86",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 208,
    "id": "14413d84",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 209,
    "id": "b0e0194d",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 210,
    "id": "401b5198",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 211,
    "id": "8e5b6d24",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "Name: store_id, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 212,
    "id": "0decb065",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 213,
    "id": "42f44ca0",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 214,
    "id": "0c66700c",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 215,
    "id": "0b6e5287",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 216,
    "id": "93f40ff6",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 217,
    "id": "42026125",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 218,
    "id": "7f679ad1",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 219,
    "id": "cc2f1745",
    "metadata": {},
    "outputs": [
@@ -650,6 +650,60 @@
    ],
    "source": [
     "print_nans(stores)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "4ee4d086",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16051 entries, 0 to 16050\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column               Non-Null Count  Dtype         \n",
+      "---  ------               --------------  -----         \n",
+      " 0   Unnamed: 0           16051 non-null  int64         \n",
+      " 1   store_id             16051 non-null  int64         \n",
+      " 2   order_id             16051 non-null  int64         \n",
+      " 3   product_id           16051 non-null  int64         \n",
+      " 4   price                16051 non-null  float64       \n",
+      " 5   profit               16051 non-null  float64       \n",
+      " 6   delivery_distance    16051 non-null  int64         \n",
+      " 7   order_start_prepare  16051 non-null  datetime64[ns]\n",
+      " 8   planned_prep_time    16051 non-null  float64       \n",
+      " 9   order_ready          16051 non-null  datetime64[ns]\n",
+      " 10  region_id            16051 non-null  int64         \n",
+      "dtypes: datetime64[ns](2), float64(3), int64(6)\n",
+      "memory usage: 1.3 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "fixed_orders = updated_orders.copy()\n",
+    "\n",
+    "# Удаляем строки без цены или прибыли\n",
+    "fixed_orders = (\n",
+    "    fixed_orders.dropna(subset=[\"price\", \"profit\"]).copy().reset_index(drop=True)\n",
+    ")\n",
+    "\n",
+    "# Пропущенные product_id заполняем фиктивным значением\n",
+    "fixed_orders[\"product_id\"] = fixed_orders[\"product_id\"].fillna(-1).astype(int)\n",
+    "\n",
+    "# Пропущенные даты заполняем служебным значением\n",
+    "default_date = datetime.datetime(1970, 1, 1)\n",
+    "fixed_orders[\"order_start_prepare\"] = fixed_orders[\"order_start_prepare\"].fillna(\n",
+    "    default_date\n",
+    ")\n",
+    "fixed_orders[\"order_ready\"] = fixed_orders[\"order_ready\"].fillna(default_date)\n",
+    "\n",
+    "fixed_orders.info()\n"
    ]
   }
  ],
