--- a/module_2/task.ipynb
+++ b/module_2/task.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "3858c5c8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "cb2b4dfe",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "069a299a",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "bdd0f79c",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "88b95c3c",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "cab7cbb9",
    "metadata": {},
    "outputs": [
@@ -224,12 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "fb8c62d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_nans(df: pd.DataFrame) -> None:\n",
+    "    \"\"\"\n",
+    "    Выводит информацию о количестве NaN значений в каждом столбце DataFrame.\n",
+    "    \"\"\"\n",
+    "\n",
     "    COLUMN_IDX: int = 1\n",
     "    count = 0\n",
     "    has_nans = 0\n",
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "c91afa86",
    "metadata": {},
    "outputs": [
@@ -304,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "14413d84",
    "metadata": {},
    "outputs": [],
@@ -333,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "b0e0194d",
    "metadata": {},
    "outputs": [
@@ -362,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "401b5198",
    "metadata": {},
    "outputs": [
@@ -372,7 +376,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -402,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "8e5b6d24",
    "metadata": {},
    "outputs": [
@@ -420,7 +424,7 @@
        "Name: store_id, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "0decb065",
    "metadata": {},
    "outputs": [
@@ -453,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "42f44ca0",
    "metadata": {},
    "outputs": [
@@ -463,7 +467,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -485,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "0c66700c",
    "metadata": {},
    "outputs": [
@@ -526,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "0b6e5287",
    "metadata": {},
    "outputs": [
@@ -561,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "93f40ff6",
    "metadata": {},
    "outputs": [
@@ -591,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "42026125",
    "metadata": {},
    "outputs": [
@@ -612,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "7f679ad1",
    "metadata": {},
    "outputs": [
@@ -633,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "cc2f1745",
    "metadata": {},
    "outputs": [
@@ -662,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "4ee4d086",
    "metadata": {},
    "outputs": [
@@ -724,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "id": "a8cb6fb4",
    "metadata": {},
    "outputs": [
@@ -734,7 +738,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -764,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "id": "63f9273a",
    "metadata": {},
    "outputs": [
@@ -774,7 +778,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -803,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "id": "0bcb2dba",
    "metadata": {},
    "outputs": [
@@ -841,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "id": "06a21726",
    "metadata": {},
    "outputs": [
@@ -909,7 +913,7 @@
        "4  20494147      121.937"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "id": "a75b9497",
    "metadata": {},
    "outputs": [
@@ -998,7 +1002,7 @@
        "4  20494147            0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "id": "f8267c57",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1183,7 @@
        "4        43.45            0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "id": "a8041e65",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1290,7 @@
        "4  20562521     8.866667"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "id": "e7896c58",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1380,7 @@
        "4  20562521                 1"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "id": "8d2e7b24",
    "metadata": {},
    "outputs": [
